{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 219,
  "lineage": "dd2330c3-498f-2d90-0f95-7584617488d5",
  "resources": [
    {
      "module": "module.cidr-secondary.module.eks",
      "mode": "data",
      "type": "aws_subnet",
      "name": "pod_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-041e6fabda704662b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:subnet/subnet-041e6fabda704662b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "available_ip_address_count": 32763,
            "cidr_block": "100.64.128.0/17",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041e6fabda704662b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491966185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "jagoan-neon-eks-pod-subnet-b",
              "SubnetType": "EKSPod"
            },
            "vpc_id": "vpc-0637841ad7277bf2d"
          }
        },
        {
          "index_key": "subnet-0af213ee04d481f7e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:subnet/subnet-0af213ee04d481f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "available_ip_address_count": 32751,
            "cidr_block": "100.64.0.0/17",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af213ee04d481f7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491966185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "jagoan-neon-eks-pod-subnet-a",
              "SubnetType": "EKSPod"
            },
            "vpc_id": "vpc-0637841ad7277bf2d"
          }
        }
      ]
    },
    {
      "module": "module.cidr-secondary.module.eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:vpc/vpc-0637841ad7277bf2d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-099758435cf616632",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-012719dd7c9bc6671",
                "cidr_block": "100.64.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0dcaaed7dd06bc50d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0637841ad7277bf2d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02bbe56daf5f8e382",
            "owner_id": "381491966185",
            "tags": {
              "Name": "msi-labs-vpc (don't-delete-and-use-this-please)",
              "ResourceID": "msi-labs"
            }
          }
        }
      ]
    },
    {
      "module": "module.cidr-secondary.module.vpc",
      "mode": "data",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:route-table/rtb-08d7ca97c8d20032e",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-077678e84f9eb86ef",
                "route_table_id": "rtb-08d7ca97c8d20032e",
                "subnet_id": "subnet-0dea9fc596a50e27c"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0bbca136c7d5d2a91",
                "route_table_id": "rtb-08d7ca97c8d20032e",
                "subnet_id": "subnet-0af213ee04d481f7e"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-08d7ca97c8d20032e",
            "owner_id": "381491966185",
            "route_table_id": "rtb-08d7ca97c8d20032e",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-092767f7e9e266c23",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0c3b6d34e8622bdff",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-0dea9fc596a50e27c",
            "tags": {
              "Name": "msi-labs-rtb-private1-ap-southeast-3a",
              "ResourceID": "msi-labs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0637841ad7277bf2d"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:route-table/rtb-07939d949f4d6a435",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0992c5b9ca329ebdf",
                "route_table_id": "rtb-07939d949f4d6a435",
                "subnet_id": "subnet-0f702b4e89fb5f74a"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-044a9a7399457e0e7",
                "route_table_id": "rtb-07939d949f4d6a435",
                "subnet_id": "subnet-041e6fabda704662b"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-07939d949f4d6a435",
            "owner_id": "381491966185",
            "route_table_id": "rtb-07939d949f4d6a435",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-092767f7e9e266c23",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0c3b6d34e8622bdff",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-0f702b4e89fb5f74a",
            "tags": {
              "Name": "msi-labs-rtb-private2-ap-southeast-3b",
              "ResourceID": "msi-labs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0637841ad7277bf2d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.cidr-secondary.module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:vpc/vpc-0637841ad7277bf2d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-099758435cf616632",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-012719dd7c9bc6671",
                "cidr_block": "100.64.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0dcaaed7dd06bc50d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0637841ad7277bf2d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02bbe56daf5f8e382",
            "owner_id": "381491966185",
            "tags": {
              "Name": "msi-labs-vpc (don't-delete-and-use-this-please)",
              "ResourceID": "msi-labs"
            }
          }
        }
      ]
    },
    {
      "module": "module.cidr-secondary.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pod_subnet_nacl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-002a5df9ead250c5f",
            "network_acl_id": "acl-04ded10060013b4ab",
            "subnet_id": "subnet-0af213ee04d481f7e"
          },
          "dependencies": [
            "module.cidr-secondary.module.vpc.aws_subnet.vpc_secondary_cidr_subnets",
            "module.cidr-secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.vpc_secondary_cidr",
            "module.cidr-secondary.module.vpc.data.aws_availability_zones.available",
            "module.cidr-secondary.module.vpc.data.aws_network_acls.private_nacl",
            "module.cidr-secondary.module.vpc.data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0b270db792d0cf11a",
            "network_acl_id": "acl-04ded10060013b4ab",
            "subnet_id": "subnet-041e6fabda704662b"
          },
          "dependencies": [
            "module.cidr-secondary.module.vpc.aws_subnet.vpc_secondary_cidr_subnets",
            "module.cidr-secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.vpc_secondary_cidr",
            "module.cidr-secondary.module.vpc.data.aws_availability_zones.available",
            "module.cidr-secondary.module.vpc.data.aws_network_acls.private_nacl",
            "module.cidr-secondary.module.vpc.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.cidr-secondary.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pod_subnet_rt_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbca136c7d5d2a91",
            "route_table_id": "rtb-08d7ca97c8d20032e",
            "subnet_id": "subnet-0af213ee04d481f7e"
          },
          "dependencies": [
            "module.cidr-secondary.module.vpc.aws_subnet.vpc_secondary_cidr_subnets",
            "module.cidr-secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.vpc_secondary_cidr",
            "module.cidr-secondary.module.vpc.data.aws_availability_zones.available",
            "module.cidr-secondary.module.vpc.data.aws_route_table.private_route_tables",
            "module.cidr-secondary.module.vpc.data.aws_subnets.private_subnets",
            "module.cidr-secondary.module.vpc.data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044a9a7399457e0e7",
            "route_table_id": "rtb-07939d949f4d6a435",
            "subnet_id": "subnet-041e6fabda704662b"
          },
          "dependencies": [
            "module.cidr-secondary.module.vpc.aws_subnet.vpc_secondary_cidr_subnets",
            "module.cidr-secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.vpc_secondary_cidr",
            "module.cidr-secondary.module.vpc.data.aws_availability_zones.available",
            "module.cidr-secondary.module.vpc.data.aws_route_table.private_route_tables",
            "module.cidr-secondary.module.vpc.data.aws_subnets.private_subnets",
            "module.cidr-secondary.module.vpc.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.cidr-secondary.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_secondary_cidr_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:subnet/subnet-0af213ee04d481f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "100.64.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af213ee04d481f7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491966185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jagoan-neon-eks-pod-subnet-a",
              "SubnetType": "EKSPod"
            },
            "tags_all": {
              "Name": "jagoan-neon-eks-pod-subnet-a",
              "SubnetType": "EKSPod"
            },
            "vpc_id": "vpc-0637841ad7277bf2d"
          },
          "dependencies": [
            "module.cidr-secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.vpc_secondary_cidr",
            "module.cidr-secondary.module.vpc.data.aws_availability_zones.available",
            "module.cidr-secondary.module.vpc.data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:subnet/subnet-041e6fabda704662b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "100.64.128.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041e6fabda704662b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491966185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jagoan-neon-eks-pod-subnet-b",
              "SubnetType": "EKSPod"
            },
            "tags_all": {
              "Name": "jagoan-neon-eks-pod-subnet-b",
              "SubnetType": "EKSPod"
            },
            "vpc_id": "vpc-0637841ad7277bf2d"
          },
          "dependencies": [
            "module.cidr-secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.vpc_secondary_cidr",
            "module.cidr-secondary.module.vpc.data.aws_availability_zones.available",
            "module.cidr-secondary.module.vpc.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:internet-gateway/igw-0fc682b8d13614038",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0637841ad7277bf2d"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0637841ad7277bf2d"
                ]
              }
            ],
            "id": "igw-0fc682b8d13614038",
            "internet_gateway_id": "igw-0fc682b8d13614038",
            "owner_id": "381491966185",
            "tags": {
              "Name": "msi-labs-igw",
              "ResourceID": "msi-labs"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0dea9fc596a50e27c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:subnet/subnet-0dea9fc596a50e27c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "available_ip_address_count": 4085,
            "cidr_block": "10.0.128.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dea9fc596a50e27c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491966185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "msi-labs-subnet-private1-ap-southeast-3a",
              "ResourceID": "msi-labs",
              "Subnet": "Private",
              "SubnetType": "Private",
              "kubernetes.io/cluster/gandi-lab-mso-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0637841ad7277bf2d"
          }
        },
        {
          "index_key": "subnet-0f702b4e89fb5f74a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:subnet/subnet-0f702b4e89fb5f74a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "available_ip_address_count": 4088,
            "cidr_block": "10.0.144.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f702b4e89fb5f74a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491966185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "msi-labs-subnet-private2-ap-southeast-3b",
              "ResourceID": "msi-labs",
              "Subnet": "Private",
              "SubnetType": "Private",
              "kubernetes.io/cluster/gandi-lab-mso-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0637841ad7277bf2d"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:vpc/vpc-0637841ad7277bf2d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-099758435cf616632",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-012719dd7c9bc6671",
                "cidr_block": "100.64.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0dcaaed7dd06bc50d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0637841ad7277bf2d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02bbe56daf5f8e382",
            "owner_id": "381491966185",
            "tags": {
              "Name": "msi-labs-vpc (don't-delete-and-use-this-please)",
              "ResourceID": "msi-labs"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:security-group/sg-0f0675336f5eb1d04",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f0675336f5eb1d04",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05305ac6d762da9e6"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Kubernetes API Access from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05305ac6d762da9e6"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dana-jagoan-neon-eks-cluster-20251218164940052200000003",
            "name_prefix": "dana-jagoan-neon-eks-cluster-",
            "owner_id": "381491966185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dana-jagoan-neon-eks-cluster"
            },
            "tags_all": {
              "Name": "dana-jagoan-neon-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0637841ad7277bf2d"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:381491966185:security-group/sg-05305ac6d762da9e6",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "100.64.0.0/16"
                ],
                "description": "Allow Kubernetes API Access from VPC Secondary IP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05305ac6d762da9e6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0675336f5eb1d04"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0675336f5eb1d04"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0675336f5eb1d04"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0675336f5eb1d04"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0675336f5eb1d04"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0675336f5eb1d04"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "dana-jagoan-neon-eks-node-20251218164940051100000001",
            "name_prefix": "dana-jagoan-neon-eks-node-",
            "owner_id": "381491966185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dana-jagoan-neon-eks-node",
              "kubernetes.io/cluster/dana-jagoan-neon-eks": "owned"
            },
            "tags_all": {
              "Name": "dana-jagoan-neon-eks-node",
              "kubernetes.io/cluster/dana-jagoan-neon-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0637841ad7277bf2d"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2610924534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0675336f5eb1d04",
            "security_group_rule_id": "sgr-0b638cdd34192a3b8",
            "self": false,
            "source_security_group_id": "sg-05305ac6d762da9e6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "vpc_access",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow Kubernetes API Access from VPC",
            "from_port": 443,
            "id": "sgrule-27459121",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0675336f5eb1d04",
            "security_group_rule_id": "sgr-0635d69a249061c55",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3866403725",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05305ac6d762da9e6",
            "security_group_rule_id": "sgr-08fdad431eb18b80c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1247080666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05305ac6d762da9e6",
            "security_group_rule_id": "sgr-00fb015acc6b0b773",
            "self": false,
            "source_security_group_id": "sg-0f0675336f5eb1d04",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2526217858",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05305ac6d762da9e6",
            "security_group_rule_id": "sgr-0cfadf6315225d6aa",
            "self": false,
            "source_security_group_id": "sg-0f0675336f5eb1d04",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1607557396",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05305ac6d762da9e6",
            "security_group_rule_id": "sgr-0e56505c23c7393a4",
            "self": false,
            "source_security_group_id": "sg-0f0675336f5eb1d04",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1284332853",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05305ac6d762da9e6",
            "security_group_rule_id": "sgr-08263dca4e7d96f6a",
            "self": false,
            "source_security_group_id": "sg-0f0675336f5eb1d04",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-674000638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05305ac6d762da9e6",
            "security_group_rule_id": "sgr-0a21b1ae8bd076b37",
            "self": false,
            "source_security_group_id": "sg-0f0675336f5eb1d04",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-189369790",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05305ac6d762da9e6",
            "security_group_rule_id": "sgr-0d4f8e6b5ed7c0077",
            "self": false,
            "source_security_group_id": "sg-0f0675336f5eb1d04",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2384464119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05305ac6d762da9e6",
            "security_group_rule_id": "sgr-0989e5588ab785af1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_secondary_cidr",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "100.64.0.0/16"
            ],
            "description": "Allow Kubernetes API Access from VPC Secondary IP",
            "from_port": 0,
            "id": "sgrule-1214077153",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05305ac6d762da9e6",
            "security_group_rule_id": "sgr-0f520f673adc9be25",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-282867718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05305ac6d762da9e6",
            "security_group_rule_id": "sgr-0ecd53dce67237103",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3028524009",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-05305ac6d762da9e6",
            "security_group_rule_id": "sgr-0ebe0f0ab0ad20a5d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks-cluster.aws_security_group.cluster",
            "module.eks.module.eks-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}